<resources>

    <!-- Put your own theMovieDb api key here! -->
    <!--<string name="api_key"></string>-->

    <string name="app_name">FinalPopularMovies</string>

    <string name="url_base_popularity">http://api.themoviedb.org/3/movie/popular</string>
    <string name="url_base_rating">http://api.themoviedb.org/3/movie/top_rated</string>
    <string name="url_base_videos_with_id_holder">https://api.themoviedb.org/3/movie/%d/videos</string>
    <string name="url_base_reviews_with_id_holder">https://api.themoviedb.org/3/movie/%d/reviews</string>
    <string name="url_base_youtube_video">https://www.youtube.com/watch</string>

    <string name="url_param_api_key">api_key</string>
    <string name="url_param_video_key">v</string>

    <string name="message_error_retrieving_movies">Error retrieving movies</string>
    <string name="message_error_in_detail_view">Error getting the movie data object</string>
    <string name="message_favorited">Favorited</string>
    <string name="message_defavorited">Defavorited</string>
    <string name="message_empty_reviews">No reviews loaded</string>
    <string name="message_empty_trailers">No trailers loaded</string>

    <string name="menu_title_popularity">Popularity</string>
    <string name="menu_title_rating">Rating</string>
    <string name="menu_title_favorite">Favorite</string>
    <string name="menu_title_refresh">Refresh</string>

    <string name="title_activity_details">Details</string>

    <string name="actionbar_title_popularity">Movies - By Popularity</string>
    <string name="actionbar_title_rating">Movies - By Rating</string>
    <string name="actionbar_title_favorite">My Favorites</string>

    <string name="text_trailers">Trailers: </string>
    <string name="text_reviews">Reviews: </string>
    <string name="text_movie_date">Date: %s</string>
    <string name="text_movie_rating">Rating: %s / 10</string>

    <string name="content_authority">com.lee.hansol.finalpopularmovies</string>
</resources>
