<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/activity_main_menu_popularity"
        android:title="@string/menu_title_popularity"
        app:showAsAction="never"/>
    <item
        android:id="@+id/activity_main_menu_rating"
        android:title="@string/menu_title_rating"
        app:showAsAction="never"/>
    <item
        android:id="@+id/activity_main_menu_favorite"
        android:title="@string/menu_title_favorite"
        app:showAsAction="never"/>
    <item
        android:id="@+id/activity_main_menu_refresh"
        android:title="@string/menu_title_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom"/>
</menu>