<?xml version="1.0" encoding="utf-8"?>
<layout
    tools:context="com.lee.hansol.finalpopularmovies.DetailsActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:id="@+id/activity_details_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.constraint.Guideline
                    android:id="@+id/title_bottom_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="100dp"/>
                <android.support.constraint.Guideline
                    android:id="@+id/vertical_half_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"/>
                <android.support.constraint.Guideline
                    android:id="@+id/vertical_left_margin_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/spacing_big"/>
                <android.support.constraint.Guideline
                    android:id="@+id/vertical_right_margin_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/spacing_big"/>
                <TextView
                    android:id="@+id/activity_details_title"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/title_bottom_guideline"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="Sen and Chihiro"
                    style="@style/movieTitleStyle"/>
                <ImageView
                    android:id="@+id/activity_details_thumbnail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/title_bottom_guideline"
                    app:layout_constraintLeft_toRightOf="@id/vertical_left_margin_guideline"
                    app:layout_constraintRight_toLeftOf="@id/vertical_half_guideline"
                    style="@style/thumbnailStyle"/>
                <TextView
                    android:id="@+id/activity_details_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/title_bottom_guideline"
                    app:layout_constraintLeft_toRightOf="@id/vertical_half_guideline"
                    app:layout_constraintRight_toLeftOf="@id/vertical_right_margin_guideline"
                    tools:text="2015/04/10"
                    style="@style/subheaderStyle"/>
                <TextView
                    android:id="@+id/activity_details_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/activity_details_date"
                    app:layout_constraintLeft_toRightOf="@id/vertical_half_guideline"
                    app:layout_constraintRight_toLeftOf="@id/vertical_right_margin_guideline"
                    tools:text="8.1 / 10"
                    style="@style/subheaderStyle"/>
                <TextView
                    android:id="@+id/activity_details_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/activity_details_thumbnail"
                    app:layout_constraintLeft_toLeftOf="@id/vertical_left_margin_guideline"
                    app:layout_constraintRight_toRightOf="@id/vertical_right_margin_guideline"
                    tools:text="Once upon a time there was a man...and a man...and a man..and a man... and a woman... and a child"
                    style="@style/overviewTextStyle"/>
                <include
                    android:id="@+id/line_under_overview"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    app:layout_constraintTop_toBottomOf="@id/activity_details_overview"
                    app:layout_constraintLeft_toLeftOf="@id/vertical_left_margin_guideline"
                    app:layout_constraintRight_toRightOf="@id/vertical_right_margin_guideline"
                    android:layout_marginTop="@dimen/spacing_normal"
                    layout="@layout/separator_line"/>
                <TextView
                    android:id="@+id/trailers_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/line_under_overview"
                    app:layout_constraintLeft_toLeftOf="@id/vertical_left_margin_guideline"
                    android:text="@string/text_trailers"
                    style="@style/headerWithTopMarginStyle"/>
                <TextView
                    android:id="@+id/activity_details_empty_trailers_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/trailers_text"
                    app:layout_constraintLeft_toRightOf="@id/vertical_left_margin_guideline"
                    app:layout_constraintRight_toLeftOf="@id/vertical_right_margin_guideline"
                    android:text="@string/message_empty_trailers"
                    android:visibility="gone"
                    style="@style/emptyViewTextStyle"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/activity_details_trailers_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/trailers_text"
                    app:layout_constraintLeft_toRightOf="@id/vertical_left_margin_guideline"
                    app:layout_constraintRight_toLeftOf="@id/vertical_right_margin_guideline"
                    android:layout_marginTop="@dimen/spacing_normal"/>
                <Space
                    android:id="@+id/transparent_line_under_trailers_container"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    app:layout_constraintTop_toBottomOf="@id/activity_details_trailers_recycler_view"
                    app:layout_constraintLeft_toLeftOf="@id/vertical_left_margin_guideline"
                    app:layout_constraintRight_toRightOf="@id/vertical_right_margin_guideline"
                    android:layout_marginTop="@dimen/spacing_big"/>
                <TextView
                    android:id="@+id/reviews_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/transparent_line_under_trailers_container"
                    app:layout_constraintLeft_toLeftOf="@id/vertical_left_margin_guideline"
                    android:text="@string/text_reviews"
                    style="@style/headerWithTopMarginStyle"/>
                <TextView
                    android:id="@+id/activity_details_empty_reviews_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/reviews_text"
                    app:layout_constraintLeft_toRightOf="@id/vertical_left_margin_guideline"
                    app:layout_constraintRight_toLeftOf="@id/vertical_right_margin_guideline"
                    android:text="@string/message_empty_reviews"
                    android:visibility="gone"
                    style="@style/emptyViewTextStyle"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/activity_details_reviews_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/reviews_text"
                    app:layout_constraintLeft_toRightOf="@id/vertical_left_margin_guideline"
                    app:layout_constraintRight_toLeftOf="@id/vertical_right_margin_guideline"
                    android:layout_marginTop="@dimen/spacing_normal"/>
                <Space
                    android:id="@+id/transparent_line_under_reviews_container"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    app:layout_constraintTop_toBottomOf="@id/activity_details_reviews_recycler_view"
                    app:layout_constraintLeft_toLeftOf="@id/vertical_left_margin_guideline"
                    app:layout_constraintRight_toRightOf="@id/vertical_right_margin_guideline"
                    android:layout_marginTop="@dimen/spacing_big"/>
            </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/activity_details_error_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/message_error_in_detail_view"
            android:visibility="invisible"
            style="@style/emptyViewTextStyle"/>
    </FrameLayout>
</layout>
